[package]
name = "nftnl-sys"
version = "0.6.3"
authors = ["Mullvad VPN"]
license = "MIT OR Apache-2.0"
description = "Low level FFI bindings to libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://github.com/mullvad/nftnl-rs"
readme = "README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "external-ffi-bindings", "no-std"]
edition = "2021"
rust-version = "1.85.0"
links = "nftnl"


[features]
nftnl-1-0-7 = []
nftnl-1-0-8 = ["nftnl-1-0-7"]
nftnl-1-0-9 = ["nftnl-1-0-8"]
nftnl-1-1-0 = ["nftnl-1-0-9"]
nftnl-1-1-1 = ["nftnl-1-1-0"]
nftnl-1-1-2 = ["nftnl-1-1-1"]

[dependencies]
cfg-if = "1.0"
libc = "0.2.166"
mnl-sys = "0.2.2" # Find and link `libmnl`

[build-dependencies]
cfg-if = "1.0"
pkg-config = "0.3.19"
