[package]
name = "nftnl"
version = "0.3.0"
authors = ["Mullvad VPN"]
license = "MIT/Apache-2.0"
description = "Safe abstraction for libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://github.com/mullvad/nftnl-rs"
readme = "../README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
edition = "2018"

[features]
nftnl-1-0-7 = ["nftnl-sys/nftnl-1-0-7"]
nftnl-1-0-8 = ["nftnl-sys/nftnl-1-0-8"]
nftnl-1-0-9 = ["nftnl-sys/nftnl-1-0-9"]
nftnl-1-1-0 = ["nftnl-sys/nftnl-1-1-0"]
nftnl-1-1-1 = ["nftnl-sys/nftnl-1-1-1"]
nftnl-1-1-2 = ["nftnl-sys/nftnl-1-1-2"]

[dependencies]
bitflags = "1.0"
err-derive = "0.2.4"
libc = "0.2.40"
log = "0.4"
nftnl-sys = { path = "../nftnl-sys", version = "0.3" }

[dev-dependencies]
ipnetwork = "0.15"
mnl = "0.1"
