[package]
name = "nftnl"
version = "0.6.2"
authors = ["Mullvad VPN"]
license = "MIT OR Apache-2.0"
description = "Safe abstraction for libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://github.com/mullvad/nftnl-rs"
readme = "../README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
edition = "2021"
rust-version = "1.56.0"

[features]
nftnl-1-0-7 = ["nftnl-sys/nftnl-1-0-7"]
nftnl-1-0-8 = ["nftnl-sys/nftnl-1-0-8"]
nftnl-1-0-9 = ["nftnl-sys/nftnl-1-0-9"]
nftnl-1-1-0 = ["nftnl-sys/nftnl-1-1-0"]
nftnl-1-1-1 = ["nftnl-sys/nftnl-1-1-1"]
nftnl-1-1-2 = ["nftnl-sys/nftnl-1-1-2"]

[dependencies]
bitflags = "1.0.4"
log = "0.4"
nftnl-sys = { path = "../nftnl-sys", version = "0.6.1" }

[dev-dependencies]
ipnetwork = "0.16"
mnl = "0.2.2"
