[package]
name = "nftnl"
version = "0.9.0"
authors = ["Mullvad VPN"]
license = "MIT OR Apache-2.0"
description = "Safe abstraction for libnftnl. Provides low-level userspace access to the in-kernel nf_tables subsystem"
repository = "https://github.com/mullvad/nftnl-rs"
readme = "../README.md"
keywords = ["nftables", "nft", "firewall", "iptables", "netfilter"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
edition = "2024"
rust-version = "1.85.0"

[features]
nftnl-1-3-0 = ["nftnl-sys/nftnl-1-3-0"]
nftnl-1-2-9 = ["nftnl-sys/nftnl-1-2-9"]
nftnl-1-2-8 = ["nftnl-sys/nftnl-1-2-8"]
nftnl-1-2-7 = ["nftnl-sys/nftnl-1-2-7"]
nftnl-1-2-6 = ["nftnl-sys/nftnl-1-2-6"]
nftnl-1-2-5 = ["nftnl-sys/nftnl-1-2-5"]
nftnl-1-2-4 = ["nftnl-sys/nftnl-1-2-4"]
nftnl-1-2-3 = ["nftnl-sys/nftnl-1-2-3"]
nftnl-1-2-2 = ["nftnl-sys/nftnl-1-2-2"]
nftnl-1-2-1 = ["nftnl-sys/nftnl-1-2-1"]
nftnl-1-2-0 = ["nftnl-sys/nftnl-1-2-0"]
nftnl-1-1-9 = ["nftnl-sys/nftnl-1-1-9"]
nftnl-1-1-8 = ["nftnl-sys/nftnl-1-1-8"]
nftnl-1-1-7 = ["nftnl-sys/nftnl-1-1-7"]
nftnl-1-1-6 = ["nftnl-sys/nftnl-1-1-6"]
nftnl-1-1-5 = ["nftnl-sys/nftnl-1-1-5"]
nftnl-1-1-4 = ["nftnl-sys/nftnl-1-1-4"]
nftnl-1-1-3 = ["nftnl-sys/nftnl-1-1-3"]
nftnl-1-1-2 = ["nftnl-sys/nftnl-1-1-2"]
nftnl-1-1-1 = ["nftnl-sys/nftnl-1-1-1"]
nftnl-1-1-0 = ["nftnl-sys/nftnl-1-1-0"]
nftnl-1-0-9 = ["nftnl-sys/nftnl-1-0-9"]
nftnl-1-0-8 = ["nftnl-sys/nftnl-1-0-8"]
nftnl-1-0-7 = ["nftnl-sys/nftnl-1-0-7"]

[dependencies]
bitflags = "2.6.0"
log = "0.4"

# NOTE: keep version in lock-step with build-dependency
nftnl-sys = { path = "../nftnl-sys", version = "0.6.2" }

[build-dependencies]
nftnl-sys = { path = "../nftnl-sys", version = "0.6.2" }

[dev-dependencies]
ipnetwork = "0.20.0"
mnl = "0.3.0"

[[example]]
name = "add-cgroup-rule"
required-features = ["nftnl-1-2-0"]
